tests/NormalTests/paczka1/fuzzy1/19753486.err
Error in line 5: J1WGy3dXkyP S490 16,1
Error in line 17: S690 S194 235,5
Error in line 34: m2WMcGgiCM4 S490 46,
Error in line 28: gdgf S690 66,5
Error in line 22: M9MH A801 76,1
